tests/repr/invalid-repr-width-1.stderr
error[E0277]: the trait bound `[(); 32]: IsU16Compatible` is not satisfied
 --> tests/repr/invalid-repr-width-1.rs:3:1
  |
3 | #[bitfield]
  | ^^^^^^^^^^^ the trait `IsU16Compatible` is not implemented for `[(); 32]`
  |
  = help: the trait `IsU16Compatible` is implemented for `[(); 16]`
  = help: see issue #48214
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/repr/invalid-repr-width-1.rs:4:8
  |
4 | #[repr(u16)] // Too few bits!
  |        ^^^ expected an array with a fixed size of 4 elements, found one with 2 elements

error[E0308]: mismatched types
 --> tests/repr/invalid-repr-width-1.rs:4:8
  |
4 | #[repr(u16)] // Too few bits!
  |        ^^^
  |        |
  |        expected an array with a fixed size of 2 elements, found one with 4 elements
  |        arguments to this function are incorrect
  |
note: associated function defined here
 --> $RUST/core/src/num/mod.rs
  |
  | /     uint_impl! {
  | |         Self = u16,
  | |         ActualT = u16,
  | |         SignedT = i16,
... |
  | |         bound_condition = "",
  | |     }
  | |_____^
  = note: this error originates in the macro `uint_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
